<resources>
    <string name="app_name">Productify Life</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="routine">Routine</string>
    <string name="calendar">Calendar</string>
    <string name="todo">To-do</string>
    <string name="rewards">Reward</string>
    <string name="settings">Settings</string>
    <string name="add_task">Add Task</string>
    <string name="cancel">Cancel</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="remind_me">Remind Me to Start</string>
    <string name="blank_time">__ : __</string>
    <string name="completion_reward">Completion Reward</string>
    <string name="coin_spent">Coin Spent</string>
    <string name="create_task">Create Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="cancel_task">Cancel Task</string>
    <string name="delete_task">Delete Task</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_productify_life">Welcome to Productify Life</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="login">login</string>
</resources>